src/test/06-Errors/error-dowhile.txt
error-dowhile.ck:4:8: error: invalid type 'DAC' in while condition
[4] }while(dac);
           ^
